--- a/src/content_panel/_base.scss
+++ b/src/content_panel/_base.scss
@@ -59,6 +59,7 @@
 }
 
 .content-panel-content-body {
+  width: 100%;
   max-width: 22em;
   font-size: ms(1);
   text-align: center;
